@@ -1,3 +1,10 @@
+2007-03-21  Julien MOUTTE  <julien@moutte.net>
+
+	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
+	(dmo_videoenc_chain): Change log levels, the first buffer
+	we generate should have the discont flag and we were not
+	clearing the need_discont flag.
+
 2007-03-13  Julien MOUTTE  <julien@moutte.net>
 
 	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps):
